# fitpackpp

./: .gitignore  CMakeLists.txt  README.md
cmake/: config.cmake.in
examples/: CMakeLists.txt  splev.cpp
fitpack/: CMakeLists.txt
fitpackpp/: CMakeLists.txt
fitpackpp/include/fitpackpp/: BSplineCurve.h
fitpackpp/src/: BSplineCurve.cpp
